--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,14 @@
 services:
-  # A PostgreSQL database
-  - type: database
-    name: fastapi-db
-    user: panju
-    databaseName: blogdbcourse
-    plan: free
-
-  # The FastAPI web service
   - type: web
     name: fastapi-app
     env: docker
     plan: free
-    healthCheckPath: /
+    region: oregon 
     envVars:
+      - key: PORT
+        value: 10000
       - key: DATABASE_URL
-        fromDatabase:
-          name: fastapi-db
-          property: connectionString
+        sync: false
       - key: SECRET_KEY
         generateValue: true
-      - key: ALGORITHM
-        value: HS256
-      - key: PROJECT_TITLE
-        value: "FastAPI Blog"
-      - key: PROJECT_VERSION
-        value: "1.0.0"
+    autoDeploy: true
